--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,10 @@
 #map {
     height: 500px;
 }
+#controls{
+    margin-left: 5px;
+    background: rgba(255, 255, 255, 0.7);
+    padding: 10px;
+    border-radius: 5px;
+    color: #000;
+}
